# wisp

./: .gitignore  Cargo.toml  LICENSE  LICENSE_MIT  README.md  index.html  package.json  pnpm-lock.yaml  rsw.toml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: dev.yml  release.yml
crate/wisp/: Cargo.toml
crate/wisp/src/: get_element.rs  lib.rs  utils.rs
crate/wisp/src/events/: input.rs  mod.rs
src/: io.rs  lib.rs  main.rs
tests/web/: io.rs  main.rs
tests/web/fixtures/: get.rs  mod.rs  page.rs  remove.rs
web/: index.html  index.ts
