[package]
name = "leptos_tutorial"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
leptos = { version = "0.6.8", features = ["csr"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
futures = "0.3.30"
async-std = "1.12.0" # temporary for async sleep debugging purposes

[dev-dependencies.web-sys]
version = "0.3.69"
features = [
  'Document',
  'Node',
  'NodeList',
  'HtmlDivElement',
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.41"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
console_error_panic_hook = false
