[package]
name = "wisp"
version = "0.1.0"
authors = ["CyanMatter <vandervaart.bart@gmail.com>"]
edition = "2021"
description = "Translator of visible and invisible text."
repository = "https://github.com/CyanMatter/wisp/"
license = "MIT"
categories = [
  "encoding",
  "text-processing",
  "wasm",
  "web-programming"
]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
console_error_panic_hook = "0.1.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
