[package]
name = "wisp"
version = "0.1.0"
authors = ["CyanMatter <vandervaart.bart@gmail.com>"]
edition = "2021"
description = "Translator of visible and invisible text."
repository = "https://github.com/CyanMatter/wisp/"
license = "MIT"
categories = [
  "encoding",
  "text-processing",
  "wasm",
  "web-programming"
]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-std = "1.12.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
futures = "0.3.30"
gloo-events = "0.2.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.41"

[dependencies.web-sys]
version = "0.3.67"
features = [
  'Document',
  'EventTarget',
  'InputEvent',
  'HtmlParagraphElement',
  'HtmlTextAreaElement',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
console_error_panic_hook = false
